// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeSlider > renders the muted state 1`] = `
<div>
  <div
    class="VolumeSlider-module_volumeSlider"
  >
    <svg
      aria-hidden="true"
      class="VolumeSlider-module_icon"
      fill="currentColor"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m3.5 3.5 4 4 .003-.003L8.917 8.91l-.003.003L10 10v-.006l2 2V12l2.122 2.121.002-.003 1.415 1.415-.003.003 1.414 1.414.003-.003 1.414 1.414-.003.003L20.5 20.5a1 1 0 0 1-1.414 1.414L12 14.828v3.758c0 .89-1.077 1.337-1.707.707L7 16H5a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h.172L2.086 4.914A1 1 0 0 1 3.5 3.5M7.172 10H5v4h2.828L10 16.17v-3.343zm7.824 2.162 1.661 1.66c.222-.564.343-1.18.343-1.822 0-1.38-.56-2.632-1.464-3.536a1 1 0 1 0-1.414 1.414 3 3 0 0 1 .874 2.284m3.164 3.165 1.462 1.46A8.96 8.96 0 0 0 21 12a8.98 8.98 0 0 0-2.636-6.364A1 1 0 0 0 16.95 7.05 6.98 6.98 0 0 1 19 12a7 7 0 0 1-.84 3.326M8.917 6.083 12 9.166V5.414c0-.89-1.077-1.337-1.707-.707z"
      />
    </svg>
    <input
      aria-label="Volume"
      aria-valuetext="0%"
      class="SeekBar-module_seekBar VolumeSlider-module_slider"
      max="100"
      min="0"
      step="1"
      style="--fillTo: 0;"
      type="range"
      value="0"
    />
  </div>
</div>
`;

exports[`VolumeSlider > renders the slider 1`] = `
<div>
  <div
    class="VolumeSlider-module_volumeSlider"
  >
    <svg
      aria-hidden="true"
      class="VolumeSlider-module_icon"
      fill="currentColor"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 10a2 2 0 0 1 2-2h2l3.293-3.293c.63-.63 1.707-.184 1.707.707v13.172c0 .89-1.077 1.337-1.707.707L7 16H5a2 2 0 0 1-2-2zm4.828 4L10 16.172V7.828L7.828 10H5v4zm6.294-5.536a1 1 0 0 1 1.414 0A5 5 0 0 1 17 12c0 1.38-.56 2.632-1.464 3.535a1 1 0 1 1-1.415-1.414 3 3 0 0 0 .88-2.121c0-.829-.335-1.578-.88-2.122a1 1 0 0 1 0-1.414"
      />
      <path
        d="M18.364 5.636A1 1 0 1 0 16.95 7.05 6.98 6.98 0 0 1 19 12a6.98 6.98 0 0 1-2.05 4.95 1 1 0 0 0 1.414 1.414A8.98 8.98 0 0 0 21 12a8.98 8.98 0 0 0-2.636-6.364"
      />
    </svg>
    <input
      aria-label="Volume"
      aria-valuetext="50%"
      class="SeekBar-module_seekBar VolumeSlider-module_slider"
      max="100"
      min="0"
      step="1"
      style="--fillTo: 0.5;"
      type="range"
      value="50"
    />
  </div>
</div>
`;
